--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Flower Shops</title>
 </head>
 <body>
-    <p>You can choose any flowers.</p>
+    <p>You can choose any flowers new.</p>
 </body>
 </html>
